# engineer-allocation-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  combined_output.txt  docker-compose.yaml
server/: .env.example  pyproject.toml
server/almebic/: env.py
server/app/: employee_tool_logs.jsonl  logging_config.py  main.py  project_tool_logs.jsonl  seed_data.py  test_insight.py  test_query.py
server/app/alembic/: env.py
server/app/alembic/versions/: 03ec25e6a304_init.py  05e586e8ee27_fix_add_end_date_to_employee.py  07999595a75b_add_start_date_to_project_employee.py  177e7fade9f8_remove_unique_employeeskill.py  480268458e7a_feat_add_project_x_stacks.py  792fefe940f9_fix_change_nullable_to_true_for_.py  a37340704ae5_add_insight_reports_table.py  d45472c7f1ac_remove_redundant_employee_stacks_.py  d6032f49d419_add_assigned_count_col_to_reqrequest.py
server/app/almebic/: env.py
server/app/almebic/versions/: 8eb419e30214_init.py  cc246aeb61d0_initial_schema.py
server/app/core/: base_service.py  config.py  database.py  dependencies.py
server/app/exceptions/: __init__.py  handler.py
server/app/features/agent/: agent.py  chatbot.py  router.py  (+2 more)
server/app/middleware/: logger.py
server/app/models/: __init__.py  audit_log.py  employee.py  employee_skill.py  employee_stack.py  entity.py  feedback.py  insight_report.py  project.py  project_employee.py  project_requirement.py  project_requirement_request.py  project_role.py  project_stack_requirement.py  project_stack_requirement_request.py  project_stacks.py  skill.py  stack.py  system_role.py  test.py
(+199 files in other folders)
