[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.138.1",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "bcrypt>=5.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "faker>=40.27.0",
]
